# blood_classifier

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
classifier/: __init__.py  config.py  dataset.py  features.py  plots.py
classifier/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
models/: logreg-model.pkl  rf_model.pkl  xgboost-model.pkl
